# sample-python-tests

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: unit-test-coverage.yml
app/: main.py
sample_python_tests/: foo.py
src/: foo.py  main.py
tests/: test_foo.py  test_main.py
