[tool.poetry]
name = "sample-python-tests"
version = "0.1.0"
description = "Sample Python project built with Poetry for automated tests"
authors = ["Fabio Bressler <fabio.bressler@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = ""
repository = "https://github.com/xyz/python-poetry-sample/"
documentation = "https://xyz.com/python-poetry/"
keywords = [ "Poetry", "Template", "Test" ]
packages = [ { include = "app", from="." } ]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^0.21.0"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"
pre-commit = "^2.20.0"
isort = "^5.10.1"
pylint = "^2.15.8"
black = {version = "^22.10.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "app.main:main"
